--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,15 @@
   }
 }
 
-body {
+html, body {
   margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 #root {
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
